configura compartilhamento de tela
Co-authored-by: Lais <lais3722@gmail.com>

Co-authored-by: Ingrid <ingridcarvalhoisc30@gmail.com>
Co-authored-by: Lorenzo <lorenzodavinci@hotmail.com>

--- a/.firebaserc
+++ b/.firebaserc
@@ -1,6 +1,7 @@
 {
   "projects": {
-    "redes": "fir-rtc-89b99-b4836"
+    "redes": "fir-rtc-89b99-b4836",
+    "default": "fir-rtc-89b99-b4836"
   },
   "targets": {},
   "etags": {},
